--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
   "manifest_version": 2,
 
-  "name": "Imagemonkey Extension",
+  "name": "ImageMonkey Extension",
   "description": "Help us to grow our public image dataset whenever you open a new tab",
   "version": "1.0",
 
   "browser_action": {
-   "default_icon": "icon.png"
+   "default_icon": "icons/icon.png"
+  },
+  "icons": {
+   "48": "icons/icon-48.png",
+   "96": "icons/icon-96.png"
   },
   "chrome_url_overrides": {
     "newtab": "main.html"
