[0.1] imagemonkey-extension: added package script + updated jquery

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,13 @@
 
   "name": "ImageMonkey Extension",
   "description": "Help us to grow our public image dataset whenever you open a new tab",
-  "version": "1.0",
+  "version": "1.0.2",
+
+  "applications": {
+    "gecko": {
+      "strict_min_version": "54.0"
+    }
+  },
 
   "browser_action": {
    "default_icon": "icons/icon.png"
